--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ body, html {
     height: 100%;
 }
 
-.bg{
+/* .bg{
     background-image: url(img/home.jpg);
     height: 100%;
     background-position: fit;
     background-repeat: no-repeat;
-    background-size: cover;
-}
+    background-size: fit;
+} */
 
 .wrapper {
     display: grid;
@@ -39,7 +39,8 @@ body, html {
     grid-gap: 10px;
     padding: 0px;
     list-style: none;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+
 }
 
 .main-nav a {
