--- a/style2.css
+++ b/style2.css
@@ -21,11 +21,11 @@ gap: 10px;
 
 .main-nav ul{
 display: grid;
-grid-gap: 10px;
+grid-gap: 35px;
 padding: 0px;
 margin: 75px;
 list-style: none; 
-grid-template-columns: repeat(6, 1fr);
+grid-template-columns: repeat(3, 2fr);
 }
 
 
@@ -33,11 +33,11 @@ grid-template-columns: repeat(6, 1fr);
     background: lightseagreen;
     display: block;
     text-decoration: none;
-    border: solid black;
+    border: solid lightgray;
     padding: 50px;
-    text-align: center;
     color: black;
     text-transform: uppercase;
     font-size: 2.2rem;
     height: 450px;
+    text-align: center;
 }
