--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body, html {
     height: 100%;
 }
 
+img {
+
+    object-fit: cover;
+
+}
+
 /* .bg{
     background-image: url(img/home.jpg);
     height: 100%;
